--- a/public/views/clients-tmpl.html
+++ b/public/views/clients-tmpl.html
@@ -1,12 +1,17 @@
 <nav-bar-directive></nav-bar-directive>
 <h2>CLIENTS</h2>
 
-<input placeholder="Name" ng-model="filter.name"/>
-<input placeholder="Phone" ng-model="filter.phone"/>
-<input placeholder="Number of Weeks" ng-model="filter.number"/>
+<input placeholder="Search Name" ng-model="filter.name"/>
+<input placeholder="Search Phone" ng-model="filter.phone"/>
+<input placeholder="Search Num. of Weeks" ng-model="filter.number"/>
 
 <ul ng-repeat="client in clients | filter: filter">
   <li>{{client.name}}</li>
   <li>{{client.phone}}</li>
   <li>{{client.number}}</li>
+  <input type="text" placeholder="Edit Name" ng-model="updatedClient.name"/>
+  <input type="number" placeholder="Edit Phone" ng-model="updatedClient.phone"/>
+  <input type="number" placeholder="Edit Num. of Weeks" ng-model="updatedClient.number"/>
+  <button ng-click="updateClient(client._id, updatedClient)" name="button">Save Changes</button>
+  <button ng-click="deleteClient(client._id)">Delete Client</button>
 </ul>
