--- a/public/views/navBar-tmpl.html
+++ b/public/views/navBar-tmpl.html
@@ -2,5 +2,5 @@
 <button ui-sref="massText">Mass Text</button>
 <button ui-sref="clients">Clients</button>
 <button ui-sref="defaultMessage">Default Promotion</button>
-<button ui-sref="newAdmin">New Admin</button>
-<button ui-sref="csvPage">Inport Clients</button>
+<button ui-sref="csvPage">Import Clients</button>
+<button ng-click="logout()">Logout</button>
