--- a/public/views/csv-tmpl.html
+++ b/public/views/csv-tmpl.html
@@ -1,2 +1,14 @@
 <nav-bar-directive></nav-bar-directive>
 <h2>CSV</h2>
+<button type="file" ngf-select="uploadFiles($file, $invalidFiles)"
+          accept=".csv" ngf-pattern="'.csv'" ngf-max-size="1MB">
+      Select File</button>
+  <br><br>
+  File:
+  <div style="font:smaller">{{f.name}} {{errFile.name}} {{errFile.$error}} {{errFile.$errorParam}}
+      <span class="progress" ng-show="f.progress >= 0">
+          <div style="width:{{f.progress}}%"
+               ng-bind="f.progress + '%'"></div>
+      </span>
+  </div>
+  {{errorMsg}}
