--- a/public/views/login-tmpl.html
+++ b/public/views/login-tmpl.html
@@ -1,5 +1,14 @@
 <h1>Promo Cue</h1>
 
-<input placeholder="Email" />
-<input placeholder="Password" />
-<button>Login</button>
+<form ng-submit="login(user)">
+  Email: <input type="email" ng-model="user.email" required />
+  Password: <input type="password" ng-model="user.password" required />
+  <button type="submit">Login</button>
+</form>
+
+<form ng-submit="register(newUser)">
+  Name: <input type="text" ng-model="newUser.name" required />
+  Email: <input type="email" ng-model="newUser.email" required />
+  Password: <input type="password" ng-model="newUser.password" required />
+  <button type="submit">Register</button>
+</form>
