Began styling the login page

--- a/public/views/csv-tmpl.html
+++ b/public/views/csv-tmpl.html
@@ -1,7 +1,7 @@
 <nav-bar-directive></nav-bar-directive>
 <h2>CSV</h2>
 <button type="file" ngf-select="uploadFiles($file, $invalidFiles)"
-          accept=".csv" ngf-pattern="'.csv'" ngf-max-size="1MB">
+          accept="text/csv" ngf-pattern="'.csv'" ngf-max-size="1MB">
       Select File</button>
   <br><br>
   File:
