--- a/public/views/login-tmpl.html
+++ b/public/views/login-tmpl.html
@@ -1,14 +1,18 @@
-<h1>Promo Cue</h1>
+<div class="login-main-container">
 
-<form ng-submit="login(user)">
-  Email: <input type="email" ng-model="user.email" required />
-  Password: <input type="password" ng-model="user.password" required />
-  <button type="submit">Login</button>
-</form>
+    <div class="login-block-container fadeInRightBig">
+        <div class="login-h1-container">
+            <h1>Promo Cue</h1>
+        </div>
 
-<form ng-submit="register(newUser)">
-  Name: <input type="text" ng-model="newUser.name" required />
-  Email: <input type="email" ng-model="newUser.email" required />
-  Password: <input type="password" ng-model="newUser.password" required />
-  <button type="submit">Register</button>
-</form>
+        <div class="login-underline"></div>
+
+        <form ng-submit="login(user)" class="login-login">
+            <input placeholder="Email" type="email" ng-model="user.email" required />
+            <input placeholder="Password" type="password" ng-model="user.password" required />
+            <button type="submit">Login</button>
+            <button ui-sref="register">Create an Account</button>
+        </form>
+    </div>
+
+</div>
