--- a/public/styles/register.sass
+++ b/public/styles/register.sass
@@ -3,7 +3,7 @@
 *
   font-family: 'Montserrat', sans-serif
 
-.login-main-container
+.register-main-container
   height: 100vh
   width: 100%
   display: flex
@@ -13,11 +13,11 @@
   background-color: black
   padding-top: 15px
 
-.login-block-container
+.register-block-container
   height: 100vh
   width: 40%
 
-.login-h1-container
+.register-h1-container
   height: 13vh
   width: 100%
   background: black
@@ -28,12 +28,12 @@
     color: white
     font-size: 80px
 
-.login-underline
+.register-underline
   height: .75vh
   width: 100%
   background-color: white
 
-.login-login
+.login-register
   height: 84.25vh
   width: 100%
   background: black
@@ -57,35 +57,11 @@
     border-radius: 2px
     font-size: 30px
 
-.login-block-container:hover
-  .login-h1-container
-    background-color: white
-    transition: 3s
-    h1
-      color: black
-  .login-underline
-    background-color: black
-  .login-login
-    background-color: white
-    transition: 3s
-    input
-      border: 2px solid black
-      text-align: center
-    h2
-      color: black
-    button
-      color: black
+.name:hover
+  text-align: center
 
-.login-register
-  height: 85vh
-  width: 49.8%
-  background: black
-  display: flex
-  flex-direction: column
-  justify-content: space-around
-  align-items: center
-  input
-    background-color: none
+.email:hover
+  text-align: center
 
-// .login-register:hover
-//   box-shadow: 0 0 1.8em black
+.password:hover
+  text-align: center
