--- a/public/views/defaultMessage-tmpl.html
+++ b/public/views/defaultMessage-tmpl.html
@@ -1,17 +1,36 @@
-<nav-bar-directive></nav-bar-directive>
-<h2>DEFAULT PROMOTION</h2>
-<textarea ng-model="newMessage" placeholder="Write Message Here" rows="8" cols="40"></textarea><br></br>
-<button ng-click="createDefaultMessage()">Save</button>
+<div class="dafualt-message-main-container">
+    <div id="nav-icon" ng-class="{ 'open': isActive }" ng-click="activeButton()">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <nav-bar-directive class="nav" ng-class="{ 'nav-display': isActive }"></nav-bar-directive>
+    </div>
+
+    <div class="dafualt-message-h2-container">
+        <h2>Default Promotion</h2>
+    </div>
+
+    <div class="default-message-underline"></div>
+
+    <textarea ng-model="newMessage" placeholder="Write Message Here" rows="8" cols="40"></textarea><br></br>
+    <button ng-click="createDefaultMessage()">Save</button>
 
 
-<ul ng-repeat="message in defaultMessage">
-  <div ng-if="message._id === user.defaultMessage">
-    Default Promotion
-  </div>
-  <li>{{message.message}}</li>
-  <input type="text" placeholder="Edit Message" ng-model="updatedMessage.message"/>
-  <button ng-click="updateMessage(message._id, updatedMessage)" name="button">Save Changes</button>
-  <button ng-click="deleteMessage(message._id)">Delete Message</button>
-  <button ng-click="makeDefault(message._id)">Make Default</button>
+    <div class="dafualt-message-card-container">
+      <ul ng-repeat="message in defaultMessage">
+        <div ng-if="message._id === user.defaultMessage">
+          Default Promotion
+        </div>
+        <li>{{message.message}}</li>
+        <input type="text" placeholder="Edit Message" ng-model="updatedMessage.message"/>
+        <button ng-click="updateMessage(message._id, updatedMessage)" name="button">Save Changes</button>
+        <button ng-click="deleteMessage(message._id)">Delete Message</button>
+        <button ng-click="makeDefault(message._id)">Make Default</button>
+      </ul>
+    </div>
 
-</ul>
+
+</div>
