--- a/public/views/login-tmpl.html
+++ b/public/views/login-tmpl.html
@@ -1,17 +1,17 @@
 <div class="login-main-container">
 
-    <div class="login-block-container fadeInRightBig">
-        <div class="login-h1-container">
+    <div class="login-block-container">
+        <div class="login-h1-container animated fadeInRightBig">
             <h1>Promo Cue</h1>
         </div>
 
-        <div class="login-underline"></div>
+        <div class="login-underline animated fadeInUpBig"></div>
 
         <form ng-submit="login(user)" class="login-login">
-            <input placeholder="Email" type="email" ng-model="user.email" required />
-            <input placeholder="Password" type="password" ng-model="user.password" required />
-            <button type="submit">Login</button>
-            <button ui-sref="register">Create an Account</button>
+            <input class="email animated fadeInLeftBig" placeholder="Email" type="email" ng-model="user.email" required />
+            <input class="password animated fadeInDownBig" placeholder="Password" type="password" ng-model="user.password" required />
+            <button class="animated fadeInRightBig" type="submit">Login</button>
+            <button class="animated fadeInUpBig" ui-sref="register">Create an Account</button>
         </form>
     </div>
 
