--- a/public/views/navBar-tmpl.html
+++ b/public/views/navBar-tmpl.html
@@ -1,6 +1,6 @@
-<button ui-sref="newClient">New Client</button>
-<button ui-sref="massText">Mass Text</button>
-<button ui-sref="clients">Clients</button>
-<button ui-sref="defaultMessage">Default Promotion</button>
-<button ui-sref="csvPage">Import Clients</button>
-<button ng-click="logout()">Logout</button>
+<button ng-class="faded" ng-hide="hidden" ui-sref="newClient"><h3>New Client</h3></button>
+<button ng-class="faded" ng-hide="hidden" ui-sref="massText"><h3>Mass Text</h3></button>
+<button ng-class="faded" ng-hide="hidden" ui-sref="clients"><h3>Clients</h3></button>
+<button ng-class="faded" ng-hide="hidden" ui-sref="defaultMessage"><h3>Default Promotion</h3></button>
+<button ng-class="faded" ng-hide="hidden" ui-sref="csvPage"><h3>Import Clients</h3></button>
+<button ng-class="faded" ng-hide="hidden" ng-click="logout()"><h3>Logout</h3></button>
