--- a/public/views/register-tmpl.html
+++ b/public/views/register-tmpl.html
@@ -1,10 +1,18 @@
-<form ng-submit="register(newUser)" class="login-register">
-    <h2>Register</h2>
-    <h2>Name:</h2>
-    <input type="text" ng-model="newUser.name" required />
-    <h2>Email:</h2>
-    <input type="email" ng-model="newUser.email" required />
-    <h2>Password:</h2>
-    <input type="password" ng-model="newUser.password" required />
-    <button type="submit">Register</button>
-</form>
+<div class="register-main-container">
+
+    <div class="register-block-container">
+        <div class="register-h1-container animated fadeInRightBig">
+            <h1>Create Account</h1>
+        </div>
+
+        <div class="register-underline animated fadeInUpBig"></div>
+
+        <form ng-submit="register(newUser)" class="login-register">
+            <input class="name animated pulse" placeholder="Name" ng-model="newUser.name" />
+            <input class="email animated pulse" placeholder="Email" type="email" ng-model="newUser.email" required />
+            <input class="password animated pulse" placeholder="Password" type="password" ng-model="newUser.password" required />
+            <button class="animated fadeInLeftBig" type="submit">Submit</button>
+        </form>
+    </div>
+
+</div>
