--- a/public/styles/clients.sass
+++ b/public/styles/clients.sass
@@ -38,6 +38,7 @@
       background-color: black
       margin-bottom: 30px
       padding: 20px
+      border-radius: 5px
       li
         color: white
       input
