--- a/public/views/massText-tmpl.html
+++ b/public/views/massText-tmpl.html
@@ -13,7 +13,7 @@
 
     <h2 class="animated fadeInUpBig">MASS TEXT</h2>
     <div class=" animated fadeInUpBig mass-text-underline"></div>
-    <textarea class="animated fadeInUpBig" ng-model="message" placeholder="Write Message Here" rows="25" cols="65"></textarea><br></br>
+    <textarea class="animated fadeInDownBig" ng-model="message" placeholder="Write Message Here" rows="25" cols="65"></textarea><br></br>
     <button class="animated fadeInUpBig" ng-click="sendText(numbers, message)">Send</button>
 
   </div>
